plugins {
    id 'java'
    id 'application'
}

group = 'dev.lolcathost.grishka'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

sourceSets {
    main {
        java { srcDirs = ['src/main/java'] }
        resources { 
            // This ensures terrain.png is found by the game
            srcDirs = ['src/main/resources'] 
        }
    }
}

repositories {
    mavenCentral()
    flatDir {
        dirs 'src/lib'
    }
}

dependencies {
    implementation name: 'lwjgl'
    implementation name: 'lwjgl_util'
}

application {
    mainClass = 'com.mojang.rubydung.RubyDung'
}

tasks.register('fatJar', Jar) {
    manifest {
        attributes 'Main-Class': 'com.mojang.rubydung.RubyDung'
    }
    archiveBaseName = 'OriginLoader'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    with jar
}

run {
    // Just the native path, no MESA overrides needed
    jvmArgs = [
        "-Djava.library.path=${file('src/lib/natives').absolutePath}",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt=ALL-UNNAMED"
    ]
}